...
    android:id="@+id/standard_collection_page_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/filter_status_indicator"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/filter_status_indicator_background"
        android:gravity="center"
        android:padding="10dp"
        android:textColor="@color/filter_status_indicator_text_color"
...
        android:layout_marginBottom="8dp"
        android:queryBackground="@android:color/transparent"
        android:queryHint="@string/search_hint"
        android:visibility="gone" />

    <GridView
        android:id="@+id/standard_collection_page"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:columnWidth="90dp"
        android:gravity="center"
        android:horizontalSpacing="10dp"
        android:numColumns="auto_fit"
...
